Update Gradle to 9.5.0, improve gradle settings